Fix Title slide

--- a/tekton101.tex
+++ b/tekton101.tex
@@ -10,14 +10,14 @@
 
 
 \title{Tekton 101}
-\date[kubeconna2019]{November 11th 2019}
-\author[Andrea]{
+\date[kubeconna2019]{November 19th 2019}
+\author[Andrea]{%
   Andrea Frittoli \\
   Open Source Developer Advocate \\
   andrea.frittoli@uk.ibm.com \\
   @blackchip76
 }
-\institute[kubeconna2019]{
+\institute[kubeconna2019]{%
   KubeCon and CloudNativeCon North America 2019
 }
 
