--- a/beamerinnerthemeibmcloud.sty
+++ b/beamerinnerthemeibmcloud.sty
@@ -1,13 +1,29 @@
 \mode<presentation>
 
 % Title page
+% \defbeamertemplate*{title page}{ibmcloud}[1][]
+% {
+%   \begin{textblock*}{\paperwidth}(0.32cm,0.34cm)
+%     \begin{beamercolorbox}[wd=0.4\paperwidth]{title page header}
+%       \usebeamerfont{title}\inserttitle\par---\par%
+%       \usebeamerfont{author}\small\insertauthor\par---\par%
+%       \usebeamerfont{author}\small\insertinstitute\par%
+%     \end{beamercolorbox}%
+%     \vfill
+%   \end{textblock*}
+% }
+
 \defbeamertemplate*{title page}{ibmcloud}[1][]
 {
   \begin{textblock*}{\paperwidth}(0.32cm,0.34cm)
-    \begin{beamercolorbox}[wd=0.4\paperwidth]{title page header}
-      \usebeamerfont{title}\inserttitle\par---\par%
-      \usebeamerfont{author}\small\insertauthor\par---\par%
-      \usebeamerfont{author}\small\insertinstitute\par%
+    \begin{beamercolorbox}[wd=0.50\paperwidth]{title page header}
+      \usebeamerfont{title}\Huge\inserttitle\par---\par%
+    \end{beamercolorbox}%
+    \begin{beamercolorbox}[wd=0.70\paperwidth]{title page header}
+      \usebeamerfont{author}\LARGE\insertauthor\Huge\par---\par%
+    \end{beamercolorbox}%
+    \begin{beamercolorbox}[wd=0.60\paperwidth]{title page header}
+      \usebeamerfont{author}\LARGE\insertinstitute\par%
     \end{beamercolorbox}%
     \vfill
   \end{textblock*}
