--- a/beamerinnerthemeibmcloud.sty
+++ b/beamerinnerthemeibmcloud.sty
@@ -45,11 +45,14 @@
 \defbeamertemplate*{section page}{ibmcloud}[1][]
 {
   \begin{textblock*}{\paperwidth}(0.32cm,0.34cm)
-    \begin{beamercolorbox}[wd=0.4\paperwidth]{section page header}
-      \usebeamerfont{section name}\insertsection%
+    \begin{beamercolorbox}[wd=0.5\paperwidth]{title page header}
+      \usebeamerfont{title}\Huge---\par%
+    \end{beamercolorbox}%
+    \begin{beamercolorbox}[wd=0.35\paperwidth]{section page header}
+      \usebeamerfont{section name}\Huge\insertsection%
     \end{beamercolorbox}%
     \vfill
-  \end{textblock*}
+  \end{textblock*}%
 }
 
 \@namedef{ps@navigation@sectionpage}{%
