Cleanup the slides

--- a/beamercolorthemeibmcloud.sty
+++ b/beamercolorthemeibmcloud.sty
@@ -16,7 +16,7 @@
 \setbeamercolor*{date}{fg=white}
 \setbeamercolor*{footline}{fg=ibmblack}
 % Regular slide
-\setbeamercolor*{background canvas}{bg=ibmlightgray}
+\setbeamercolor*{background canvas}{bg=white}
 \setbeamercolor*{frametitle}{fg=black}
 \setbeamercolor*{itemize item}{fg=black}
 
