--- a/tekton101.tex
+++ b/tekton101.tex
@@ -68,7 +68,7 @@
         \item Eventing
         \item Serving
       \end{itemize}
-      \item ~Setpt 2018...
+      \item Sept 2018...
       \item Knative Pipelines
     \end{itemize}
     \begin{itemize}
@@ -238,7 +238,7 @@
   \frametitle{References}
   \begin{itemize}
     \item This Talk: https://github.com/afrittoli//github.com/afrittoli/tekton101/tree/kubecon-na-2019
-    \item Tekton Links:§
+    \item Tekton Links:
     \begin{itemize}
       \item https://tekton.dev/, https://cd.foundation/
       \item https://github.com/tektoncd/pipeline
